sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var x:Int=getNombreValeurs()
  var v=0
  var y=0
  for (i<-0 to x-1) {
    v=getValeur(i)
    for (j<-i to 0 by -1) {
      if (!plusPetit(j,i) {
        setValeur(i,getValeur(j))  
        y=j
      }
      setValeur(y,v)
           }
          }
         }
        }